--- a/reactapp/src/Components/HomePage.css
+++ b/reactapp/src/Components/HomePage.css
@@ -1,11 +1,9 @@
-/* HomePage.css */
-
 .home-page {
     font-family: Arial, sans-serif;
 }
 
 .welcome-section {
-   padding: 50px 0;
+    padding: 50px 0;
     color: white;
     text-align: center;
 }
@@ -13,7 +11,8 @@
 .image-container {
     position: relative;
     height: 300px;
-    background: url('/home/coder/project/workspace/reactapp/public/traveltalescoverimage.jpg') no-repeat center center;background-size: cover;
+    background: url('/home/coder/project/workspace/reactapp/public/traveltalescoverimage.jpg') no-repeat center center;
+    background-size: cover;
 }
 
 .strip-background {
@@ -32,17 +31,13 @@
     color: black;
     text-align: center;
 }
-
-.welcome-text {
-    padding: 10px 0;
-    background: #d4d9d9;
-    margin-top: 10px;
-    
-}
-
 footer {
     background: #333;
     color: white;
-    padding: 10px 0;
+}
+.wel
+{
+    padding: 10px 300px 10px 300px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
