--- a/reactapp/src/Components/HomePage.css
+++ b/reactapp/src/Components/HomePage.css
@@ -32,7 +32,7 @@
     text-align: center;
 }
 footer {
-    background: palegoldenrod;
+    background: #a8dadc;
     color: rgb(255, 255, 255);
     
 }
