--- a/reactapp/src/Components/Login.css
+++ b/reactapp/src/Components/Login.css
@@ -7,9 +7,9 @@
 }
 
 .login-background {
-    background-color: rgb(214, 219, 161);
+    background-color: #a8dadc;
     color: #ffffff;
-    padding: 30px;
+    padding: 30px 100px;
     border-radius: 10px 0 0 10px;
     display: flex;
     flex-direction: column;
@@ -48,6 +48,18 @@
 .form-control {
     border-radius: 5px;
     border: 1px solid #ced4da;
+    transition: box-shadow 0.3s ease-in-out; /* Smooth transition */
+}
+
+#email,
+#password {
+    border: 2px solid #ede099; /* Yellow border */
+}
+
+#email:focus,
+#password:focus {
+    box-shadow: 0 0 30px rgba(105, 183, 214, 0.5); /* Yellow box shadow */
+    outline: none; /* Remove default outline */
 }
 
 .btn-primary {
