--- a/reactapp/src/GuideComponents/ViewPlace.css
+++ b/reactapp/src/GuideComponents/ViewPlace.css
@@ -1,33 +1,51 @@
+
 .container {
-    margin-top: 20px;
+    background-color: #f8f9fa;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+
 h2 {
+    color: #343a40;
+    font-weight: bold;
     text-align: center;
     margin-bottom: 20px;
 }
 
-.text-success h2, .text-danger h2 {
-    font-size: 1.5rem;
+
+.alert {
+    margin-bottom: 20px;
 }
 
+
 .table {
-    margin-top: 20px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.table thead {
+    background-color: #a8dadc; 
+    color: #ffffff;
+}
+
+.table th, .table td {
+    text-align: center;
+    vertical-align: middle;
 }
 
 .table th {
-    text-align: center;
-    background-color: #007bff;
-    color: white;
-    vertical-align: middle;
-}
-.table td{
-    color: black;
-    background-color: white;
-    margin: 0;
+    font-weight: bold;
 }
 
+.table tbody tr:hover {
+    background-color: #f1f1f1;
+}
 
+/* Button styling */
 .btn {
     margin: 5px;
 }
@@ -37,7 +55,17 @@ h2 {
     border-color: #007bff;
 }
 
+.btn-primary:hover {
+    background-color: #0056b3;
+    border-color: #004085;
+}
+
 .btn-danger {
     background-color: #dc3545;
     border-color: #dc3545;
+}
+
+.btn-danger:hover {
+    background-color: #c82333;
+    border-color: #bd2130;
 }
