--- a/reactapp/src/Components/Login.css
+++ b/reactapp/src/Components/Login.css
@@ -1,37 +1,50 @@
 .login-container {
-    background-color: #f8f9fa;
+    background: url('/home/coder/project/workspace/reactapp/public/background image.jpg') no-repeat center center;
+    background-size: cover; 
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .login-background {
-    background-color: #a8dadc;
-    color: #ffffff;
-    padding: 30px 100px;
-    border-radius: 10px 0 0 10px;
+    color: #060000;
+    padding: 30px 40px 10px 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: large;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .login-background h1 {
     font-size: 2.5rem;
     margin-bottom: 20px;
+    text-shadow: 2px 2px 5px white; 
 }
 
 .login-background p {
     font-size: 1.2rem;
+    text-shadow: 1px 1px 3px white; 
 }
 
 .login-box {
-    background-color: #ffffff;
-    padding: 30px;
-    border-radius: 0 10px 10px 0;
+    background-color: rgba(255, 255, 255, 0.8); 
+    padding: 10px 60px 20px 60px;
+    border-radius: 10px 10px 10px 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    position:absolute;
+    top: 50%;
+    right: 4%;
+    transform: translateY(-50%);
 }
 
 .login-box h2 {
@@ -53,7 +66,7 @@
 
 #email,
 #password {
-    border: 2px solid #ede099; /* Yellow border */
+    border: 2px solid #4e440a; 
 }
 
 #email:focus,
@@ -89,4 +102,8 @@ a {
 a:hover {
     color: #0056b3;
     text-decoration: none;
+}
+.welbox
+{
+
 }
