--- a/reactapp/src/Components/Signup.css
+++ b/reactapp/src/Components/Signup.css
@@ -1,6 +1,5 @@
 .signup-container {
-    background-color: #f8f9fa;
-    padding: 50px 0;
+    background: url('/home/coder/project/workspace/reactapp/public/Backgroundimage1.jpg') no-repeat center center;
 }
 
 .signup-box {
@@ -29,7 +28,7 @@
 .signup-box .form-group input[type="password"],
 .signup-box .form-group input[type="tel"],
 .signup-box .form-group select {
-    border: 1px solid #ede099;
+    border: 1px solid #393311;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
     width: 100%;
     transition: box-shadow 0.3s ease-in-out;
