--- a/reactapp/src/Components/Login.css
+++ b/reactapp/src/Components/Login.css
@@ -31,14 +31,17 @@
 }
 
 .login-background p {
-    font-size: 1.2rem;
-    text-shadow: 1px 1px 3px white; 
+    font-size: 1.7rem;
+    text-shadow: 2px 2px 5px white; 
+    font-weight: bold;
+    color: #343a40;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .login-box {
     background-color: rgba(255, 255, 255, 0.8); 
-    padding: 10px 60px 20px 60px;
-    border-radius: 10px 10px 10px 10px;
+    padding: 20px 66px 20px 66px;
+    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     position:absolute;
@@ -52,7 +55,6 @@
     font-weight: bold;
     color: #343a40;
 }
-
 .form-group label {
     font-weight: bold;
     color: #495057;
@@ -71,13 +73,13 @@
 
 #email:focus,
 #password:focus {
-    box-shadow: 0 0 30px rgba(105, 183, 214, 0.5); /* Yellow box shadow */
+    box-shadow: 0 0 30px rgba(210, 168, 0, 0.5);
     outline: none; /* Remove default outline */
 }
 
 .btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: #988021cb;
+    border-color: #000000;
     border-radius: 5px;
     font-weight: bold;
 }
@@ -103,7 +105,4 @@ a:hover {
     color: #0056b3;
     text-decoration: none;
 }
-.welbox
-{
 
-}
