--- a/reactapp/src/GuideComponents/GuideNavbar.css
+++ b/reactapp/src/GuideComponents/GuideNavbar.css
@@ -10,7 +10,7 @@
 
 .navbar-brand {
     font-size: 2rem;
-    color: #97785e !important;
+    color: #3c230f !important;
     text-shadow: 1px 1px 2px rgba(1.5, 0.5, 0.5, 0.5);
 }
 
