--- a/reactapp/src/Components/Signup.css
+++ b/reactapp/src/Components/Signup.css
@@ -1,8 +1,11 @@
-/* General Styling */
+
 .signup-container {
-    background: url('/home/coder/project/workspace/reactapp/public/SIGNUP.jpg') no-repeat center center ;
+    background: url('/home/coder/project/workspace/reactapp/public/SIGNUP.jpg') no-repeat center center;
+    
     background-size: cover;
-    min-height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
