--- a/reactapp/src/TravellerComponents/TravellerViewPlace.css
+++ b/reactapp/src/TravellerComponents/TravellerViewPlace.css
@@ -1,6 +1,6 @@
 
 .container {
-  background-color: #f8f9fa;
+  background :  rgb(236, 218, 212);
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
