--- a/reactapp/src/GuideComponents/GuideNavbar.css
+++ b/reactapp/src/GuideComponents/GuideNavbar.css
@@ -1,6 +1,6 @@
 /* Navbar styling */
 .navbar {
-    margin-bottom: 20px;
+    margin-bottom: 15px !important;
     background-color: rgba(255, 255, 255, 0.9); 
     border-radius: 50px; 
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2); 
