--- a/reactapp/src/GuideComponents/PlaceForm.css
+++ b/reactapp/src/GuideComponents/PlaceForm.css
@@ -141,3 +141,23 @@ select.form-control {
     box-shadow: 0 0 30px rgba(46, 166, 218, 0.5);
     outline: none; 
 }
+.modal-content {
+    border-radius: 10px;
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.modal h5 {
+    background-color: #8b4513;
+    padding: auto;
+    color: #fff !important;
+    border-bottom: none;
+}
+
+.modal-footer {
+    border-top: none;
+}
+
+.modal-body {
+    font-size: 1.1rem;
+    color: #333;
+}
