--- a/reactapp/src/TravellerComponents/TravellerNavbar.css
+++ b/reactapp/src/TravellerComponents/TravellerNavbar.css
@@ -2,7 +2,7 @@
 .navbar {
     margin-bottom: 20px;
     background: linear-gradient(90deg, #b5651d, #d4a373); 
-    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2); 
     padding: 15px 40px; 
     margin: 0; 
     position: relative !important; 
